# bio-seq-gb

./: bio-seq-gb.cabal
Bio/Sequence/: GB.hs
Bio/Sequence/GB/: Parser.hs  Types.hs
